# AquaticRPG

./: .gitignore  README.md  boi.csv  meson.build  tiles.json
STORM/: .gitignore  meson.build
STORM/src/: Editor.cpp  Editor.hpp  Map.cpp  Map.hpp  MapManager.cpp  MapManager.hpp  Tile.hpp  TilePalette.cpp  TilePalette.hpp  Tileset.cpp  Tileset.hpp  main.cpp
maps/: booger.json  lab.json  labmap.json
src/: AssetManager.hpp  Camera.hpp  CollisionManager.hpp  GameMap.hpp  InputManager.hpp  MapRenderer.hpp  MovementComponent.hpp  Player.hpp  Systems.hpp  TileDatabase.hpp  Tilemap.hpp  TimeManager.hpp  Types.hpp  World.hpp  main.cpp
